Remove ugly link boxes

--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -14,9 +14,16 @@
 \usepackage{xargs}
 \usepackage{xspace}
 \usepackage{xstring}
+\usepackage{xcolor}
 \usepackage{import}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage{multirow}
+\hypersetup{
+    colorlinks,
+    linkcolor={red!90!black},
+    citecolor={blue!50!black},
+    urlcolor={blue!80!black}
+}
 
 \usetikzlibrary{arrows}
 \usetikzlibrary{arrows.meta}
