Register naming consistent with how binutils will be
 On branch spec/draft-4
 Changes to be committed:
	modified:   docs/crypto-ise.specification.tex

--- a/docs/crypto-ise.specification.tex
+++ b/docs/crypto-ise.specification.tex
@@ -21,22 +21,22 @@ The addressing is shown diagrammatically in table \ref{tab:state-addr}.
 \begin{tabular}{|l|l l l l|}
 \hline
 \multicolumn{1}{|l|}{3:0} & \textbf{31:24} & \textbf{23:16} & \textbf{15:8} & \textbf{7:0} \\ \hline
-\textbf{0 }   & r0.3       & r0.2       & r0.1       & r0.0       \\ \hline
-\textbf{1 }   & r1.3       & r1.2       & r1.1       & r1.0       \\ \hline
-\textbf{2 }   & r2.3       & r2.2       & r2.1       & r2.0       \\ \hline
-\textbf{3 }   & r3.3       & r3.2       & r3.1       & r3.0       \\ \hline
-\textbf{4 }   & r4.3       & r4.2       & r4.1       & r4.0       \\ \hline
-\textbf{5 }   & r5.3       & r5.2       & r5.1       & r5.0       \\ \hline
-\textbf{6 }   & r6.3       & r6.2       & r6.1       & r6.0       \\ \hline
-\textbf{7 }   & r7.3       & r7.2       & r7.1       & r7.0       \\ \hline
-\textbf{8 }   & r8.3       & r8.2       & r8.1       & r8.0       \\ \hline
-\textbf{9 }   & r9.3       & r9.2       & r9.1       & r9.0       \\ \hline
-\textbf{10}   & r10.3      & r10.2      & r10.1      & r10.0      \\ \hline
-\textbf{11}   & r11.3      & r11.2      & r11.1      & r11.0      \\ \hline
-\textbf{12}   & r12.3      & r12.2      & r12.1      & r12.0      \\ \hline
-\textbf{13}   & r13.3      & r13.2      & r13.1      & r13.0      \\ \hline
-\textbf{14}   & r14.3      & r14.2      & r14.1      & r14.0      \\ \hline
-\textbf{15}   & r15.3      & r15.2      & r15.1      & r15.0      \\ \hline
+\textbf{0 }   & c0.3       & c0.2       & c0.1       & c0.0       \\ \hline
+\textbf{1 }   & c1.3       & c1.2       & c1.1       & c1.0       \\ \hline
+\textbf{2 }   & c2.3       & c2.2       & c2.1       & c2.0       \\ \hline
+\textbf{3 }   & c3.3       & c3.2       & c3.1       & c3.0       \\ \hline
+\textbf{4 }   & c4.3       & c4.2       & c4.1       & c4.0       \\ \hline
+\textbf{5 }   & c5.3       & c5.2       & c5.1       & c5.0       \\ \hline
+\textbf{6 }   & c6.3       & c6.2       & c6.1       & c6.0       \\ \hline
+\textbf{7 }   & c7.3       & c7.2       & c7.1       & c7.0       \\ \hline
+\textbf{8 }   & c8.3       & c8.2       & c8.1       & c8.0       \\ \hline
+\textbf{9 }   & c9.3       & c9.2       & c9.1       & c9.0       \\ \hline
+\textbf{10}   & c10.3      & c10.2      & c10.1      & c10.0      \\ \hline
+\textbf{11}   & c11.3      & c11.2      & c11.1      & c11.0      \\ \hline
+\textbf{12}   & c12.3      & c12.2      & c12.1      & c12.0      \\ \hline
+\textbf{13}   & c13.3      & c13.2      & c13.1      & c13.0      \\ \hline
+\textbf{14}   & c14.3      & c14.2      & c14.1      & c14.0      \\ \hline
+\textbf{15}   & c15.3      & c15.2      & c15.1      & c15.0      \\ \hline
 \end{tabular}
 \caption{This table shows the per-byte layout of the register file. Note
 that there is no {\em zero} register in the ISE. The register with
