Be consistent about no operands in instr subsection titles

--- a/docs/crypto-ise.specification.tex
+++ b/docs/crypto-ise.specification.tex
@@ -376,7 +376,7 @@ the destination register.
 }
 \end{itemize}
 
-\instdesc{INS.cr rd, rs, s, l}
+\instdesc{INS.cr}
 
 This instruction allows for insertion of a contiguous sequences of two-bit
 pairs into words. It takes the low $2*l$ bits of $\CPR[*][rs]$ and inserts them
