Split notation and state sections into separate files.
 On branch spec/draft-4
 Changes to be committed:
	new file:   docs/crypto-ise.notation.tex
	modified:   docs/crypto-ise.specification.tex
	new file:   docs/crypto-ise.state.tex
	modified:   docs/crypto-ise.tex

--- a/docs/crypto-ise.tex
+++ b/docs/crypto-ise.tex
@@ -20,6 +20,13 @@
 \section{Concepts \& Ideas}
 \import{./}{crypto-ise.concepts.tex}
 
+\section{Notation}
+\import{./}{crypto-ise.notation.tex}
+
+\section{ISE State}
+\import{./}{crypto-ise.state.tex}
+
+\section{Instruction Specifications}
 \import{./}{crypto-ise.specification.tex}
 
 
